--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,20 @@
-apply plugin: 'java'
 apply plugin: 'scala'
+apply plugin: 'cobertura'
 
 sourceCompatibility = 1.7
 version = '1.0'
 
 repositories {
     mavenCentral()
+}
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "net.saliman:gradle-cobertura-plugin:2.2.8"
+    }
 }
 
 project.ext {
@@ -18,4 +27,8 @@ dependencies {
             "org.scalatest:scalatest_2.11:2.2.2",
             "io.reactivex:rxjava:1.0.4"
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+cobertura {
+    coverageFormats = ['html', 'xml']
 }
